<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    tools:context=".ui.auth.AuthenticationFragment">
    <ImageView
        android:src="@drawable/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_email_id"
        app:placeholderText="@string/placeholder_enter_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/hint_password"
        android:layout_marginTop="10dp"
        app:placeholderText="@string/placeholder_enter_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="10dp"
        android:id="@+id/login"
        android:text="@string/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:text="@string/text_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/sign_up"
            android:padding="1dp"
            android:text="@string/text_sign_up"
            android:clickable="true"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>